--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-json": "*",
         "ext-curl": "*",
         "ext-openssl": "*",
+        "ext-posix": "*",
         "slim/slim": "^4.14.0",
         "slim/psr7": "^1.7.0",
         "slim/twig-view": "^3.4.0",
