--- a/docker/rootfs/usr/local/etc/php/conf.d/custom.ini
+++ b/docker/rootfs/usr/local/etc/php/conf.d/custom.ini
@@ -1,13 +1,25 @@
-short_open_tag= On
-memory_limit= 128M
-post_max_size= 64M
-upload_max_filesize= 32M
+short_open_tag = On
+expose_php = Off
+memory_limit = 256M
+post_max_size = 64M
+upload_max_filesize = 32M
+max_execution_time = 60
+max_input_vars = 3000
+realpath_cache_size = 4096K
+realpath_cache_ttl = 600
 
 [Date]
-date.timezone="UTC"
+date.timezone = "UTC"
 
 [opcache]
-opcache.enable=1
-opcache.enable_cli=1
-opcache.jit_buffer_size=100M
-opcache.jit=1255
+opcache.enable = 1
+opcache.enable_cli = 1
+opcache.memory_consumption = 192
+opcache.interned_strings_buffer = 16
+opcache.max_accelerated_files = 10000
+opcache.jit = tracing
+opcache.jit_buffer_size = 100M
+
+[Session]
+session.gc_divisor = 1000
+session.gc_probability = 1
